--- a/build.gradle
+++ b/build.gradle
@@ -75,8 +75,8 @@ if (ENV.BUILD_NUMBER) {
 }
 
 minecraft {
-	version = "1.11-13.19.0.2180"
-	mappings = "snapshot_20161118"
+    version = "1.10.2-12.18.2.2121"
+    mappings = "snapshot_20161105"
     replace "@MODVERSION@", project.version
   //  makeObfSourceJar = false
     useDepAts = true
@@ -99,17 +99,13 @@ dependencies {
     if(!f.exists()){
         f.mkdir()
     }
-	deobfCompile 'RebornCore:RebornCore-1.11:+:universal'
-	deobfCompile "mezz.jei:jei_1.11:+"
-	compile "mcp.mobius.waila:Hwyla:+"
-	compile "net.darkhax.tesla:Tesla:1.11-1.3.0.51:deobf"
-
-	//1.11 updates
-	//deobfCompile "slimeknights:TConstruct:1.10.2-2.5.3.jenkins384"
-	//deobfCompile "slimeknights.mantle:Mantle:1.10.2-1.0.0.jenkins170"
-	deobfCompile "mcjty.theoneprobe:TheOneProbe:1.11-1.3.3-46"
-
-	compileOnly 'net.industrial-craft:industrialcraft-2:2.6.129-ex110'
+	deobfCompile 'RebornCore:RebornCore-1.10.2:+:universal'
+    deobfCompile "mezz.jei:jei_1.10.2:+"
+//    compile "net.darkhax.tesla:Tesla:1.9.4-1.1.0.24:deobf"
+	deobfCompile "slimeknights:TConstruct:1.10.2-2.5.3.jenkins384"
+	deobfCompile "slimeknights.mantle:Mantle:1.10.2-1.0.0.jenkins170"
+    deobfCompile "mcjty.theoneprobe:TheOneProbe:1.9.4-1.0.4-14"
+    deobfCompile 'net.industrial-craft:industrialcraft-2:2.6.129-ex110'
 }
 
 
